# core-simple

./: README.md  core-simple.cabal
src/Core/: Simple.hs
