name:                core-simple
version:             0.1.0.0
synopsis:            Simple library for getting the Core of your Haskell code programmatically
description:         A simplistic library for getting the Core of your Haskell code. Supports                          multiple GHC versions
homepage:            http://github.com/alpmestan/core-simple
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari <alpmestan@gmail.com>
maintainer:          alpmestan@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Core.Simple
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4,
                       attoparsec,
                       filepath,
                       process,
                       text,
                       transformers,
                       aeson,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall